Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
 
 <pre><code>$ sudo myhosts mydev.host delete 193.5.5.1
 </code></pre>
+
+<p>List host entries added by myhosts</p>
+
+<pre><code>$ sudo myhosts list
+</code></pre>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/hasantayyar">hasantayyar</a></p>
